[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Hit_Hurt4.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Hit_Hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Laser_Shoot2.wav" type="AudioStream" id=3]
[ext_resource path="res://Entities/Ship/player-spaceship-damage.png" type="Texture" id=4]
[ext_resource path="res://Assets/Laser_Shoot4.wav" type="AudioStream" id=5]
[ext_resource path="res://Entities/Ship/explosion-1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Hit_Hurt3.wav" type="AudioStream" id=7]
[ext_resource path="res://Systems/RandomSFXPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Ship/Health.gd" type="Script" id=9]
[ext_resource path="res://Systems/StateMachine.gd" type="Script" id=10]
[ext_resource path="res://Entities/Ship/Ship.gd" type="Script" id=11]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0
anim_speed = 1.5

[sub_resource type="Animation" id=3]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 2.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Ship" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 8
script = ExtResource( 11 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )
actor_path = NodePath("../../Ship")

[node name="Sprite" type="Sprite" parent="."]
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="WhiteSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 5
lifetime = 0.5
process_material = SubResource( 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -19, -4, -10, -7, 0, -30, 10, -7, 18, -4, 18, 17, -19, 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hurtbox" type="Area2D" parent="." groups=[
"player",
]]
visible = false
collision_layer = 2
collision_mask = 12
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( -19, -4, -10, -7, 0, -30, 10, -7, 18, -4, 18, 17, -19, 17 )

[node name="MovementAnimations" type="AnimationPlayer" parent="."]
anims/go_to_idle = SubResource( 3 )
anims/turn = SubResource( 4 )

[node name="DamageAnimations" type="AnimationPlayer" parent="."]
anims/died = SubResource( 5 )
anims/take_damage = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.40934e-21, -24.75 )
scale = Vector2( 0.6, 0.475 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 0, -43 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 9 )

[node name="LaserShootSFX" parent="." instance=ExtResource( 8 )]
audio_files = [ ExtResource( 3 ), ExtResource( 5 ) ]

[node name="HurtSFX" parent="." instance=ExtResource( 8 )]
pitch_scale = 1.25
audio_files = [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ) ]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
